--- a/data.ipynb
+++ b/data.ipynb
@@ -8,25 +8,24 @@
     "from sklearn.datasets import make_blobs\n",
     "import os\n",
     "\n",
-    "def generate_and_save_datasets(\n",
-    "    dims=(2, 10, 50),\n",
+    "def generate_and_save_datasets_csv(\n",
+    "    dims=(4, 16, 32, 64, 128),\n",
     "    n_samples=1000,\n",
     "    n_clusters=5,\n",
-    "    cluster_std=1.0,\n",
-    "    seed=42,\n",
-    "    out_dir=\"kmeans_datasets\"\n",
+    "    cluster_std=0.8,\n",
+    "    seed=1234,\n",
+    "    out_dir=\"kmeans_datasets_csv\"\n",
     "):\n",
     "    \"\"\"\n",
-    "    For each dimensionality in `dims`, generate a Gaussian‑blob dataset\n",
-    "    with a fixed seed so everyone gets the same files, and save to .npz.\n",
+    "    For each dimensionality in `dims`, generate Gaussian‐blob data\n",
+    "    and save (features + label) as a single CSV for easy C++ loading.\n",
     "    \"\"\"\n",
-    "    # 1) Fix NumPy's global RNG\n",
+    "    # fix RNG for everything\n",
     "    np.random.seed(seed)\n",
-    "\n",
     "    os.makedirs(out_dir, exist_ok=True)\n",
     "\n",
     "    for d in dims:\n",
-    "        # 2) Also pass the same seed into make_blobs\n",
+    "        # 1) sample from Gaussians\n",
     "        X, y = make_blobs(\n",
     "            n_samples=n_samples,\n",
     "            n_features=d,\n",
@@ -34,37 +33,39 @@
     "            cluster_std=cluster_std,\n",
     "            random_state=seed\n",
     "        )\n",
-    "        fname = os.path.join(out_dir, f\"blobs_{n_samples}x{d}d_{n_clusters}c_seed{seed}.npz\")\n",
-    "        np.savez_compressed(fname, X=X, y=y)\n",
-    "        print(f\"Saved {X.shape} → {fname}\")\n",
     "\n",
+    "        # 2) stack features + label into one array\n",
+    "        data = np.hstack([X, y.reshape(-1, 1)])  # shape (n_samples, d+1)\n",
     "\n",
-    "generate_and_save_datasets(\n",
-    "    dims=[4, 16, 32, 64, 128],\n",
-    "    n_samples=1000,\n",
-    "    n_clusters=5,\n",
-    "    cluster_std=0.8,\n",
-    "    seed=1234,              # ← every teammate uses this same seed\n",
-    "    out_dir=\"kmeans_datasets\"\n",
-    ")\n",
+    "        # 3) CSV filename\n",
+    "        fname = os.path.join(\n",
+    "            out_dir,\n",
+    "            f\"blobs_{n_samples}x{d}d_{n_clusters}c_seed{seed}.csv\"\n",
+    "        )\n",
     "\n",
-    "generate_and_save_datasets(\n",
-    "    dims=[4, 16, 32, 64, 128],\n",
-    "    n_samples=1000,\n",
-    "    n_clusters=10,\n",
-    "    cluster_std=0.8,\n",
-    "    seed=1234,              # ← every teammate uses this same seed\n",
-    "    out_dir=\"kmeans_datasets\"\n",
-    ")\n",
+    "        # 4) write with a header: f0,f1,...,f{d-1},label\n",
+    "        header = \",\".join([f\"f{i}\" for i in range(d)] + [\"label\"])\n",
+    "        np.savetxt(\n",
+    "            fname,\n",
+    "            data,\n",
+    "            delimiter=\",\",\n",
+    "            header=header,\n",
+    "            comments=\"\"          # avoid '#' prefix on header line\n",
+    "        )\n",
     "\n",
-    "generate_and_save_datasets(\n",
-    "    dims=[4, 16, 32, 64, 128],\n",
-    "    n_samples=1000,\n",
-    "    n_clusters=15,\n",
-    "    cluster_std=0.8,\n",
-    "    seed=1234,              # ← every teammate uses this same seed\n",
-    "    out_dir=\"kmeans_datasets\"\n",
-    ")"
+    "        print(f\"Saved {X.shape} + labels → {fname}\")\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    # example: 3 different cluster counts\n",
+    "    for k in (5, 10, 15):\n",
+    "        generate_and_save_datasets_csv(\n",
+    "            dims=[4, 16, 32, 64, 128],\n",
+    "            n_samples=1000,\n",
+    "            n_clusters=k,\n",
+    "            cluster_std=0.8,\n",
+    "            seed=1234,\n",
+    "            out_dir=\"kmeans_datasets_csv\"\n",
+    "        )\n"
    ],
    "outputs": [
     {
