--- a/data.ipynb
+++ b/data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "source": [
     "import numpy as np\n",
     "from sklearn.datasets import make_blobs\n",
@@ -70,23 +70,31 @@
    "outputs": [
     {
      "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "/home/jiaxin/miniconda3/envs/vipergpt/lib/python3.10/site-packages/scipy/__init__.py:155: UserWarning: A NumPy version >=1.18.5 and <1.26.0 is required for this version of SciPy (detected version 1.26.4\n",
+      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n"
+     ]
+    },
+    {
+     "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Saved (1000, 4) → kmeans_datasets/blobs_1000x4d_5c_seed1234.npz\n",
-      "Saved (1000, 16) → kmeans_datasets/blobs_1000x16d_5c_seed1234.npz\n",
-      "Saved (1000, 32) → kmeans_datasets/blobs_1000x32d_5c_seed1234.npz\n",
-      "Saved (1000, 64) → kmeans_datasets/blobs_1000x64d_5c_seed1234.npz\n",
-      "Saved (1000, 128) → kmeans_datasets/blobs_1000x128d_5c_seed1234.npz\n",
-      "Saved (1000, 4) → kmeans_datasets/blobs_1000x4d_10c_seed1234.npz\n",
-      "Saved (1000, 16) → kmeans_datasets/blobs_1000x16d_10c_seed1234.npz\n",
-      "Saved (1000, 32) → kmeans_datasets/blobs_1000x32d_10c_seed1234.npz\n",
-      "Saved (1000, 64) → kmeans_datasets/blobs_1000x64d_10c_seed1234.npz\n",
-      "Saved (1000, 128) → kmeans_datasets/blobs_1000x128d_10c_seed1234.npz\n",
-      "Saved (1000, 4) → kmeans_datasets/blobs_1000x4d_15c_seed1234.npz\n",
-      "Saved (1000, 16) → kmeans_datasets/blobs_1000x16d_15c_seed1234.npz\n",
-      "Saved (1000, 32) → kmeans_datasets/blobs_1000x32d_15c_seed1234.npz\n",
-      "Saved (1000, 64) → kmeans_datasets/blobs_1000x64d_15c_seed1234.npz\n",
-      "Saved (1000, 128) → kmeans_datasets/blobs_1000x128d_15c_seed1234.npz\n"
+      "Saved (1000, 4) + labels → kmeans_datasets_csv/blobs_1000x4d_5c_seed1234.csv\n",
+      "Saved (1000, 16) + labels → kmeans_datasets_csv/blobs_1000x16d_5c_seed1234.csv\n",
+      "Saved (1000, 32) + labels → kmeans_datasets_csv/blobs_1000x32d_5c_seed1234.csv\n",
+      "Saved (1000, 64) + labels → kmeans_datasets_csv/blobs_1000x64d_5c_seed1234.csv\n",
+      "Saved (1000, 128) + labels → kmeans_datasets_csv/blobs_1000x128d_5c_seed1234.csv\n",
+      "Saved (1000, 4) + labels → kmeans_datasets_csv/blobs_1000x4d_10c_seed1234.csv\n",
+      "Saved (1000, 16) + labels → kmeans_datasets_csv/blobs_1000x16d_10c_seed1234.csv\n",
+      "Saved (1000, 32) + labels → kmeans_datasets_csv/blobs_1000x32d_10c_seed1234.csv\n",
+      "Saved (1000, 64) + labels → kmeans_datasets_csv/blobs_1000x64d_10c_seed1234.csv\n",
+      "Saved (1000, 128) + labels → kmeans_datasets_csv/blobs_1000x128d_10c_seed1234.csv\n",
+      "Saved (1000, 4) + labels → kmeans_datasets_csv/blobs_1000x4d_15c_seed1234.csv\n",
+      "Saved (1000, 16) + labels → kmeans_datasets_csv/blobs_1000x16d_15c_seed1234.csv\n",
+      "Saved (1000, 32) + labels → kmeans_datasets_csv/blobs_1000x32d_15c_seed1234.csv\n",
+      "Saved (1000, 64) + labels → kmeans_datasets_csv/blobs_1000x64d_15c_seed1234.csv\n",
+      "Saved (1000, 128) + labels → kmeans_datasets_csv/blobs_1000x128d_15c_seed1234.csv\n"
      ]
     }
    ],
@@ -94,57 +102,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "source": [
-    "data = np.load(\"kmeans_datasets/blobs_1000x10d_5c.npz\")\n",
-    "X, y = data[\"X\"], data[\"y\"]\n",
-    "print(X, y)"
+    "import numpy as np\n",
+    "import os\n",
+    "from glob import glob\n",
+    "\n",
+    "def generate_and_save_inits_csv(\n",
+    "    data_dir=\"kmeans_datasets_csv\",\n",
+    "    init_seed=999,\n",
+    "    init_out_dir=\"kmeans_inits\",\n",
+    "    replace=False\n",
+    "):\n",
+    "    \"\"\"\n",
+    "    For each CSV in `data_dir`, pick k initial centroids (rows of X),\n",
+    "    then save them both as .npz and as .csv for easy loading in any language.\n",
+    "    \"\"\"\n",
+    "    rng = np.random.RandomState(init_seed)\n",
+    "    os.makedirs(init_out_dir, exist_ok=True)\n",
+    "\n",
+    "    for csv_path in glob(os.path.join(data_dir, \"*.csv\")):\n",
+    "        base = os.path.basename(csv_path).rsplit(\".\", 1)[0]\n",
+    "        parts = base.split(\"_\")\n",
+    "        k = int(parts[-2][:-1])  # e.g. \"10c\" → 10 clusters\n",
+    "\n",
+    "        # Load data: last column is the label\n",
+    "        data = np.loadtxt(csv_path, delimiter=\",\", skiprows=1)\n",
+    "        X = data[:, :-1]  # drop the label column\n",
+    "\n",
+    "        # Pick k unique initial indices\n",
+    "        if replace:\n",
+    "            idx = rng.randint(0, X.shape[0], size=k)\n",
+    "        else:\n",
+    "            idx = rng.choice(X.shape[0], size=k, replace=False)\n",
+    "\n",
+    "        centers = X[idx]  # shape (k, d)\n",
+    "\n",
+    "        # Prepare output names\n",
+    "        npz_name = f\"{base}_init_seed{init_seed}.npz\"\n",
+    "        csv_name = f\"{base}_init_seed{init_seed}.csv\"\n",
+    "        npz_path = os.path.join(init_out_dir, npz_name)\n",
+    "        csv_path_out = os.path.join(init_out_dir, csv_name)\n",
+    "\n",
+    "        \n",
+    "        # 2) Save as .csv with header f0,f1,...,f{d-1}\n",
+    "        d = centers.shape[1]\n",
+    "        header = \",\".join(f\"f{i}\" for i in range(d))\n",
+    "        np.savetxt(\n",
+    "            csv_path_out,\n",
+    "            centers,\n",
+    "            delimiter=\",\",\n",
+    "            header=header,\n",
+    "            comments=\"\"  # no '#' prefix\n",
+    "        )\n",
+    "        print(f\"Saved CSV init → {csv_path_out}\")\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    generate_and_save_inits_csv(\n",
+    "        data_dir=\"kmeans_datasets_csv\",\n",
+    "        init_seed=1234,\n",
+    "        init_out_dir=\"kmeans_inits\",\n",
+    "        replace=False\n",
+    "    )\n"
    ],
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "[[ 2.72807458 -6.9097581  -4.02305094 ... -0.4392695   0.40265826\n",
-      "  -9.29086799]\n",
-      " [-2.24449344  9.6811093   3.04489032 ...  7.65873812  1.45829075\n",
-      "   4.11683629]\n",
-      " [-1.86887     9.61771919  5.59100953 ...  6.61802319  1.89184666\n",
-      "   3.56552944]\n",
-      " ...\n",
-      " [-2.54876859  9.55414172  3.74170122 ...  9.28776303  1.51210825\n",
-      "   3.73665399]\n",
-      " [ 2.33926167 -9.54020976 -9.34508859 ... -6.85053347  2.63428571\n",
-      "  -0.88176994]\n",
-      " [-9.26186784  9.8388351   7.00467186 ... -1.17405349 -1.23270793\n",
-      "  -2.40539236]] [2 0 0 3 0 4 1 3 0 4 1 0 3 0 0 1 4 3 3 1 1 2 2 3 4 2 4 2 1 2 0 1 0 1 3 1 2\n",
-      " 0 2 2 3 0 0 2 2 2 4 1 1 4 2 3 0 4 4 0 0 2 4 1 0 1 0 4 3 3 3 2 1 0 1 1 1 3\n",
-      " 1 4 3 2 4 3 3 2 1 0 2 1 2 3 2 0 4 0 1 3 0 0 0 0 1 2 1 3 1 4 1 4 3 3 3 4 4\n",
-      " 2 2 0 4 4 4 0 0 2 1 1 0 0 4 4 1 2 4 0 3 4 4 3 3 0 2 2 0 1 3 2 2 3 0 1 1 0\n",
-      " 0 4 4 0 3 3 1 4 1 3 3 4 1 4 4 1 2 2 1 2 1 1 4 0 2 1 3 4 2 1 3 4 0 3 2 3 1\n",
-      " 3 4 3 2 0 0 4 4 4 3 4 3 1 2 0 2 2 0 1 1 0 1 0 2 4 1 3 2 2 3 1 2 3 2 1 0 3\n",
-      " 2 3 3 3 1 3 2 4 3 0 1 4 1 1 2 4 2 1 2 4 0 4 4 3 0 4 3 4 1 1 2 3 2 4 1 4 1\n",
-      " 0 4 3 3 4 0 0 2 2 2 2 4 4 2 1 2 1 1 1 3 1 2 2 2 2 4 1 3 2 3 3 2 3 0 1 0 2\n",
-      " 3 4 0 3 4 1 0 2 0 4 0 0 2 0 1 1 4 4 0 0 4 2 4 1 1 1 3 0 0 2 1 4 4 1 4 3 4\n",
-      " 1 1 0 4 1 4 2 2 4 2 3 3 2 2 2 0 0 4 0 4 3 2 1 4 0 0 3 1 3 4 3 4 0 1 2 1 3\n",
-      " 3 2 2 1 3 1 3 0 3 1 1 3 3 2 1 0 0 3 3 2 0 0 1 1 3 1 3 1 4 0 1 3 1 0 4 2 2\n",
-      " 1 2 3 3 0 2 1 0 4 2 3 3 0 3 2 1 0 2 4 0 4 3 2 2 2 4 2 4 2 3 0 0 3 2 2 0 0\n",
-      " 1 4 1 1 4 0 4 4 4 3 4 0 4 4 3 3 4 3 4 4 2 2 3 3 3 2 2 2 3 3 2 0 0 4 2 2 4\n",
-      " 2 1 1 0 4 2 3 1 1 1 2 2 4 4 0 4 1 1 4 0 4 2 3 3 4 3 0 0 2 3 0 0 2 4 4 3 4\n",
-      " 1 4 1 0 2 2 3 2 4 2 4 2 1 1 4 0 0 1 4 1 3 3 0 2 0 0 1 3 1 1 4 0 0 0 4 2 0\n",
-      " 1 2 1 4 3 3 0 1 0 2 2 4 3 4 2 0 0 3 4 0 3 0 1 4 0 3 1 2 1 2 3 4 4 0 3 0 1\n",
-      " 4 3 3 0 1 4 1 4 2 4 0 2 4 0 3 3 0 2 0 4 3 2 4 3 4 2 1 2 2 0 4 3 1 0 3 2 1\n",
-      " 0 1 2 3 3 4 0 3 4 2 2 0 2 1 2 3 2 0 2 1 0 0 2 0 0 0 0 2 0 4 0 3 0 0 2 1 3\n",
-      " 2 3 3 0 1 2 3 1 2 2 3 3 4 1 0 1 4 3 4 2 1 3 3 4 1 4 4 4 4 2 1 2 4 1 4 3 3\n",
-      " 2 1 2 3 2 0 1 0 2 4 2 1 4 4 1 3 0 2 1 0 1 4 4 0 3 2 0 1 2 1 1 1 2 4 3 3 0\n",
-      " 4 2 1 4 2 1 0 3 4 2 2 3 2 1 4 0 2 3 2 2 2 0 1 1 2 0 1 3 0 2 4 4 0 0 3 0 0\n",
-      " 0 0 4 2 3 3 4 0 4 2 3 0 3 1 0 0 2 3 4 3 2 3 2 0 4 2 4 1 3 3 0 4 4 3 0 4 0\n",
-      " 4 1 1 4 4 2 1 1 1 0 1 3 3 2 0 2 3 0 3 1 0 0 0 0 1 1 1 3 0 3 3 4 0 4 1 3 0\n",
-      " 3 1 3 3 2 0 4 2 0 1 1 4 3 4 2 4 1 2 0 2 1 1 0 3 4 3 2 1 1 3 1 3 3 3 4 1 4\n",
-      " 2 2 2 4 1 0 0 4 0 0 1 0 4 0 4 0 0 0 2 4 4 0 1 4 2 3 0 3 3 1 3 1 4 3 3 1 0\n",
-      " 1 4 1 3 3 3 1 3 1 3 1 4 3 4 0 1 2 4 4 2 1 4 2 0 1 4 4 1 3 4 0 2 2 4 2 4 3\n",
-      " 0 4 2 1 2 3 1 1 3 4 3 3 3 3 3 4 0 2 1 1 4 2 0 2 4 0 1 1 4 4 2 1 1 2 3 0 3\n",
-      " 1]\n"
+      "Saved NPZ init → kmeans_inits/blobs_1000x128d_15c_seed1234_init_seed1234.npz\n",
+      "Saved CSV init → kmeans_inits/blobs_1000x128d_15c_seed1234_init_seed1234.csv\n",
+      "Saved NPZ init → kmeans_inits/blobs_1000x128d_10c_seed1234_init_seed1234.npz\n",
+      "Saved CSV init → kmeans_inits/blobs_1000x128d_10c_seed1234_init_seed1234.csv\n",
+      "Saved NPZ init → kmeans_inits/blobs_1000x16d_10c_seed1234_init_seed1234.npz\n",
+      "Saved CSV init → kmeans_inits/blobs_1000x16d_10c_seed1234_init_seed1234.csv\n",
+      "Saved NPZ init → kmeans_inits/blobs_1000x16d_15c_seed1234_init_seed1234.npz\n",
+      "Saved CSV init → kmeans_inits/blobs_1000x16d_15c_seed1234_init_seed1234.csv\n",
+      "Saved NPZ init → kmeans_inits/blobs_1000x4d_10c_seed1234_init_seed1234.npz\n",
+      "Saved CSV init → kmeans_inits/blobs_1000x4d_10c_seed1234_init_seed1234.csv\n",
+      "Saved NPZ init → kmeans_inits/blobs_1000x4d_15c_seed1234_init_seed1234.npz\n",
+      "Saved CSV init → kmeans_inits/blobs_1000x4d_15c_seed1234_init_seed1234.csv\n",
+      "Saved NPZ init → kmeans_inits/blobs_1000x32d_5c_seed1234_init_seed1234.npz\n",
+      "Saved CSV init → kmeans_inits/blobs_1000x32d_5c_seed1234_init_seed1234.csv\n",
+      "Saved NPZ init → kmeans_inits/blobs_1000x128d_5c_seed1234_init_seed1234.npz\n",
+      "Saved CSV init → kmeans_inits/blobs_1000x128d_5c_seed1234_init_seed1234.csv\n",
+      "Saved NPZ init → kmeans_inits/blobs_1000x64d_15c_seed1234_init_seed1234.npz\n",
+      "Saved CSV init → kmeans_inits/blobs_1000x64d_15c_seed1234_init_seed1234.csv\n",
+      "Saved NPZ init → kmeans_inits/blobs_1000x16d_5c_seed1234_init_seed1234.npz\n",
+      "Saved CSV init → kmeans_inits/blobs_1000x16d_5c_seed1234_init_seed1234.csv\n",
+      "Saved NPZ init → kmeans_inits/blobs_1000x64d_10c_seed1234_init_seed1234.npz\n",
+      "Saved CSV init → kmeans_inits/blobs_1000x64d_10c_seed1234_init_seed1234.csv\n",
+      "Saved NPZ init → kmeans_inits/blobs_1000x4d_5c_seed1234_init_seed1234.npz\n",
+      "Saved CSV init → kmeans_inits/blobs_1000x4d_5c_seed1234_init_seed1234.csv\n",
+      "Saved NPZ init → kmeans_inits/blobs_1000x32d_10c_seed1234_init_seed1234.npz\n",
+      "Saved CSV init → kmeans_inits/blobs_1000x32d_10c_seed1234_init_seed1234.csv\n",
+      "Saved NPZ init → kmeans_inits/blobs_1000x64d_5c_seed1234_init_seed1234.npz\n",
+      "Saved CSV init → kmeans_inits/blobs_1000x64d_5c_seed1234_init_seed1234.csv\n",
+      "Saved NPZ init → kmeans_inits/blobs_1000x32d_15c_seed1234_init_seed1234.npz\n",
+      "Saved CSV init → kmeans_inits/blobs_1000x32d_15c_seed1234_init_seed1234.csv\n"
      ]
     }
    ],
